--- a/icea.html
+++ b/icea.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Kalkulator Resistansi Konduktor ICEA v12</title>
+  <title>Kalkulator Resistansi Konduktor ICEA v5</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet"/>
   <style>
     :root {
@@ -19,7 +19,6 @@
       --info-bg: #e8f5ff;
       --info-border: #90caf9;
       --info-color: #1976d2;
-      --container-padding: 32px 24px;
     }
     body.dark {
       --bg-color: #121212;
@@ -42,25 +41,24 @@
       font-family: 'Inter', sans-serif;
       background: var(--bg-color);
       color: var(--text-color);
+      min-height: 100vh;
       display: flex;
       align-items: center;
       justify-content: center;
-      min-height: 100vh;
-      width: 100vw;
-      overflow-x: hidden;
     }
     .container-main {
       background: var(--input-bg);
-      padding: var(--container-padding);
+      padding: 32px 24px;
       border-radius: 20px;
       max-width: 480px;
       width: 100%;
       box-shadow: 0 8px 24px rgba(0, 0, 0, 0.07);
       border: 1px solid var(--border-color);
       position: relative;
-      margin: 0 auto;
-      margin-left: 24px;
-      margin-right: 24px;
+      margin: auto;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
     }
     .title-main {
       text-align: center;
@@ -197,6 +195,8 @@
       margin-bottom: 3px;
       display: block;
     }
+
+    /* --- BUTTONS GRID --- */
     .btn-section {
       margin-top: 32px;
       margin-bottom: 0;
@@ -283,21 +283,12 @@
       background: var(--divider);
       margin-bottom: 12px;
     }
-    /* Tambahkan responsive horizontal padding pada layar mobile */
-    @media (max-width: 600px) {
-      :root {
-        --container-padding: 16px 12px;
-      }
+
+    @media (max-width: 480px) {
       .container-main {
-        border-radius: 10px;
-        max-width: 100vw;
-        margin-left: 10px;
-        margin-right: 10px;
-      }
-    }
-    @media (max-width: 460px) {
-      :root {
-        --container-padding: 12px 8px;
+        max-width: 99vw;
+        padding: 20px 4vw;
+        border-radius: 8px;
       }
       .form-row { flex-direction: row !important; gap: 12px !important; flex-wrap: nowrap !important; }
       .btn-section { gap: 9px; }
@@ -309,7 +300,9 @@
       .info-area { padding: 10px 7px 10px 8px; }
       .info-area.compact { min-width: 28px; }
       .info-area-gap { height: 16px; }
+      .title-main { font-size: 1.1rem; }
     }
+
     @media print {
       body {
         background: white !important;
@@ -323,8 +316,6 @@
         box-shadow: none;
         padding: 0;
         max-width: 100%;
-        margin-left: 0;
-        margin-right: 0;
       }
       .divider {
         display: none;
@@ -334,16 +325,18 @@
 </head>
 <body>
   <div class="container-main">
-    <div class="title-main">Kalkulator Resistansi Konduktor ICEA v12</div>
+    <div class="title-main">Kalkulator Resistansi Konduktor ICEA v5</div>
     <div class="divider"></div>
 
     <div class="form-row">
       <div class="form-group">
-        <label class="form-label" for="alat">Pembacaan Alat (Ω)</label>
-        <input type="text" class="form-input" id="alat" style="flex:1;" inputmode="decimal" pattern="[0-9]*" />
+        <label class="form-label" for="alat">Pembacaan Alat</label>
+        <div style="display: flex; gap: 8px;">
+          <input type="text" class="form-input" id="alat" style="flex:1;" inputmode="decimal" pattern="[0-9]*" />
+        </div>
       </div>
       <div class="form-group">
-        <label class="form-label" for="panjang">Panjang (Feet)</label>
+        <label class="form-label" for="panjang">Panjang (Meter)</label>
         <input type="text" class="form-input" id="panjang" inputmode="decimal" pattern="[0-9]*" />
       </div>
     </div>
@@ -370,8 +363,9 @@
       <div class="form-group">
         <label class="form-label" for="luas">Penampang</label>
         <select class="form-input" id="luas">
-          <option value="8">8 AWG</option>
-          <option value="3000">3000 KCMIL</option>
+          <option value="4/0AWG">4/0 AWG</option>
+          <option value="250KCMIL">250 KCMIL</option>
+          <option value="750KCMIL">750 KCMIL</option>
         </select>
       </div>
       <div class="form-group">
@@ -384,7 +378,6 @@
       <div id="hasil-nilai"></div>
       <div id="hasil-status"></div>
     </div>
-    <div id="hasil-spek-tabel" style="font-style:italic; margin-top:6px;"></div>
 
     <div class="btn-section" id="btnSection">
       <div class="btn-row1">
@@ -399,23 +392,46 @@
       <div class="btn-row3">
         <div class="right-actions">
           <button class="icon-btn" id="toggleMode" title="Toggle Dark/Light" aria-label="Toggle Dark/Light">
-            <span id="toggleIcon"></span>
+            <span id="toggleIcon">
+              <svg id="icon-sun" width="22" height="22" viewBox="0 0 22 22" fill="none">
+                <circle cx="11" cy="11" r="5" stroke="currentColor" stroke-width="2"/>
+                <g stroke="currentColor" stroke-width="2">
+                  <line x1="11" y1="2" x2="11" y2="5"/>
+                  <line x1="11" y1="17" x2="11" y2="20"/>
+                  <line x1="2" y1="11" x2="5" y2="11"/>
+                  <line x1="17" y1="11" x2="20" y2="11"/>
+                  <line x1="5.22" y1="5.22" x2="7.07" y2="7.07"/>
+                  <line x1="14.93" y1="14.93" x2="16.78" y2="16.78"/>
+                  <line x1="16.78" y1="5.22" x2="14.93" y2="7.07"/>
+                  <line x1="7.07" y1="14.93" x2="5.22" y2="16.78"/>
+                </g>
+              </svg>
+            </span>
           </button>
         </div>
         <button class="main-btn" id="btn-laporan">Laporan</button>
         <div class="right-actions">
           <span id="infoArea" class="info-area compact" tabindex="0" aria-label="Tampilkan informasi aplikasi" title="Informasi">
-            <span class="info-icon" id="infoIcon"></span>
+            <span class="info-icon" id="infoIcon">
+              <svg width="22" height="22" viewBox="0 0 22 22" fill="none">
+                <circle cx="11" cy="11" r="10" stroke="currentColor" stroke-width="2"/>
+                <rect x="10" y="10" width="2" height="7" rx="1" fill="currentColor"/>
+                <rect x="10" y="6" width="2" height="2" rx="1" fill="currentColor"/>
+              </svg>
+            </span>
           </span>
         </div>
       </div>
     </div>
+
     <div class="info-area-gap" id="infoAreaGap" style="display:none;"></div>
     <div id="infoAreaExpandedContainer"></div>
+
     <div class="footer-main">Made by Williyanto Adi 2025</div>
   </div>
 
   <script>
+    // Membatasi input hanya angka & titik/koma di kolom pembacaan alat, panjang dan suhu
     function onlyNumberInput(el) {
       el.addEventListener('input', function() {
         let val = el.value;
@@ -426,6 +442,7 @@
           val = parts[0] + '.' + parts.slice(1).join('');
         }
         el.value = val;
+        hitungHasil(); // Panggil hitungHasil setiap kali input berubah
       });
     }
     onlyNumberInput(document.getElementById("alat"));
@@ -448,7 +465,7 @@
         </span>
         <span class="info-text">
           <strong>Tentang aplikasi ini</strong>
-          Ini adalah aplikasi untuk menghitung nilai resistansi pada konduktor Tembaga (CU), Aluminium (AL) dengan suhu dan panjang.
+          Ini adalah aplikasi untuk menghitung nilai resistansi pada konduktor Tembaga (CU) dan Aluminium (AL) dengan suhu dan panjang.
         </span>
       </div>
     `;
@@ -458,6 +475,7 @@
         infoAreaGap.style.display = "block";
         infoAreaExpandedContainer.innerHTML = infoContent;
         infoExpanded = true;
+        // Event untuk collapse
         const icon = document.getElementById("infoIconExpanded");
         const area = document.getElementById("infoAreaExpanded");
         icon.addEventListener("click", collapseInfoArea);
@@ -485,6 +503,8 @@
         expandInfoArea();
       }
     });
+
+    // Accessibility: focus style for info icon
     infoArea.addEventListener("focus", function() {
       infoArea.style.outline = "2px solid var(--info-color)";
     });
@@ -497,13 +517,15 @@
     const toggleIcon = document.getElementById("toggleIcon");
     function setThemeIcon(isDark) {
       if (isDark) {
+        // Moon icon
         toggleIcon.innerHTML = `
           <svg id="icon-moon" width="22" height="22" viewBox="0 0 22 22" fill="none">
-            <path d="M17.5 14.7A7.01 7.01 0 0 1 7.3 4.5c0-.3-.3-.5-.6-.4A9 9 0 1 0 18 18c.2-.3-.1-.6-.5-.6z"
+            <path d="M17.5 14.7A7.01 7.01 0 0 1 7.3 4.5c0-.3-.3-.5-.6-.4A9 0 1 0 18 18c.2-.3-.1-.6-.5-.6z"
                   stroke="currentColor" stroke-width="2" fill="currentColor"/>
           </svg>
         `;
       } else {
+        // Sun icon
         toggleIcon.innerHTML = `
           <svg id="icon-sun" width="22" height="22" viewBox="0 0 22 22" fill="none">
             <circle cx="11" cy="11" r="5" stroke="currentColor" stroke-width="2"/>
@@ -540,36 +562,27 @@
 
     let laporanPengujian = [];
 
-    // Data spek untuk hasil uji
     const specData = {
-      CU: {
-        "8": "0,66504",
-        "3000": "0,00370"
+      CU: { 
+        "4/0AWG": "0.05202",
+        "250KCMIL": "0.04396",
+        "750KCMIL": "0.01469" 
       },
-      AL: {
-        "8": "1,09140",
-        "3000": "0,00608"
+      AL: { 
+        "4/0AWG": "0.08527",
+        "250KCMIL": "0.07211",
+        "750KCMIL": "0.02407" 
       }
     };
-    // Data spek sesuai tabel permintaan user
-    const spekTabelData = {
-      CU: {
-        "8": "0,66504",
-        "3000": "0,00370"
-      },
-      AL: {
-        "8": "1,09140",
-        "3000": "0,00608"
-      }
-    };
+
     const suhuData = {
       CU: {
-        "0": "1.107",
-        "40": "0.944"
+        30: "0.981",
+        31: "0.977"
       },
       AL: {
-        "0": "1.110",
-        "40": "0.944"
+        30: "0.981",
+        31: "0.977"
       }
     };
 
@@ -591,8 +604,8 @@
     function updateSpec() {
       const bahan = bahanEl.value;
       const luas = getLuasValue();
-      spesifikasiEl.value = specData[bahan]?.[luas] || "";
-      hitungHasil();
+      spesifikasiEl.value = specData[bahan]?.[luas]?.replace(".", ",") || ""; // Display with comma for UI
+      hitungHasil(); // Panggil hitungHasil setelah update spec
     }
 
     function updateFaktor() {
@@ -601,16 +614,14 @@
       let suhuNumber = parseFloat(suhuValue);
       let faktor = "";
       if (!isNaN(suhuNumber) && suhuData[bahan]) {
-        if (Math.abs(suhuNumber - 21.1) < 0.0001 && suhuData[bahan]["21.1"]) {
-          faktor = suhuData[bahan]["21.1"];
-        } else if (suhuData[bahan][suhuNumber]) {
+        if (suhuData[bahan][suhuNumber]) { 
           faktor = suhuData[bahan][suhuNumber];
-        } else if (suhuData[bahan][Math.floor(suhuNumber)]) {
-          faktor = suhuData[bahan][Math.floor(suhuNumber)];
+        } else { 
+          faktor = ""; 
         }
       }
-      faktorEl.value = faktor;
-      hitungHasil();
+      faktorEl.value = faktor.replace(".", ","); 
+      hitungHasil(); // Panggil hitungHasil setelah update faktor
     }
 
     function isInputLengkap() {
@@ -626,17 +637,16 @@
       if (greeting) {
         hasilStatus.innerHTML = `<span class="hint-green">${greeting} Mohon lengkapi data untuk memulai.</span>`;
       } else {
-        hasilStatus.innerHTML = `<span class="hint-green">Mohon lengkapi data, untuk memulai. aplikasi ini</span>`;
+        hasilStatus.innerHTML = `<span class="hint-green">Mohon lengkapi data, untuk memulai aplikasi ini.</span>`;
       }
       hasilNilai.textContent = "";
       hasilEl.style.color = "inherit";
     }
 
     function hitungHasil() {
-      let alatValue = alatEl.value.replace(",", ".");
-      let alatNumber = parseFloat(alatValue);
+      let alatNumber = parseFloat(alatEl.value.replace(",", ".")); 
       const panjang = parseFloat(document.getElementById("panjang").value.replace(",", "."));
-      const faktor = parseFloat(faktorEl.value.replace(",", "."));
+      const faktor = parseFloat(faktorEl.value.replace(",", ".")); 
       const bahan = bahanEl.value;
       const luas = getLuasValue();
       const specRaw = specData[bahan]?.[luas]?.replace(",", ".");
@@ -646,18 +656,20 @@
         showGreetingHint();
         return;
       }
+
       if (!isNaN(alatNumber) && !isNaN(panjang) && !isNaN(faktor) && panjang !== 0) {
-        const hasil = alatNumber / panjang * faktor;
-        hasilNilai.textContent = hasil.toFixed(5) + " Ω/feet";
+        // RUMUS BARU: (Pembacaan Alat / Panjang) * Faktor Koreksi Suhu
+        const hasil = (alatNumber / panjang) * faktor;
+        hasilNilai.textContent = hasil.toFixed(5); 
 
         if (!isNaN(spec)) {
           if (hasil < spec) {
             hasilEl.style.color = "green";
-            hasilStatus.textContent = "Hasil pengujian memenuhi standar.";
+            hasilStatus.textContent = "Hasil pengujian memenuhi standar. ✅";
             hasilStatus.style.color = "green";
           } else {
             hasilEl.style.color = "red";
-            hasilStatus.textContent = "Hasil pengujian tidak memenuhi standar.";
+            hasilStatus.textContent = "Hasil pengujian tidak memenuhi standar. ❌";
             hasilStatus.style.color = "red";
           }
         } else {
@@ -670,59 +682,44 @@
       }
     }
 
-    function updateSpekTabel() {
-      const bahan = bahanEl.value;
-      const luas = getLuasValue();
-      const spekTabel = spekTabelData[bahan]?.[luas];
-      const hasilSpekTabel = document.getElementById("hasil-spek-tabel");
-      if (spekTabel) {
-        hasilSpekTabel.textContent = `Spek sesuai tabel : ${spekTabel} Ω/feet`;
-      } else {
-        hasilSpekTabel.textContent = "";
-      }
-    }
-
     function simpanPengujian() {
       const alat = alatEl.value || "-";
+      const alatSatuan = "mΩ (diasumsikan)"; 
       const panjang = document.getElementById("panjang").value || "-";
       const suhu = suhuEl.value || "-";
       const faktor = faktorEl.value || "-";
       const bahan = bahanEl.options[bahanEl.selectedIndex].text || "-";
       const luas = luasEl.options[luasEl.selectedIndex].text || "-";
       const spesifikasi = spesifikasiEl.value || "-";
-      const hasil = hasilNilai.textContent || "-";
+      const hasil = hasilNilai.textContent || "-"; 
       const status = hasilStatus.textContent || "-";
       const now = new Date();
       const jamPengujian = now.toLocaleTimeString('id-ID', { hour: '2-digit', minute: '2-digit', second: '2-digit' });
       const tanggalPengujian = now.toLocaleDateString('id-ID');
       laporanPengujian.push({
-        alat, panjang, suhu, faktor, bahan, luas, spesifikasi, hasil, status,
+        alat, alatSatuan, panjang, suhu, faktor, bahan, luas, spesifikasi, hasil, status,
         tanggal: tanggalPengujian,
         jam: jamPengujian
       });
-      alert("Pengujian berhasil disimpan ke laporan!");
+      alert("Pengujian berhasil disimpan ke laporan! 💾");
     }
 
     document.getElementById("btn-simpan").addEventListener("click", simpanPengujian);
 
     bahanEl.addEventListener('change', () => {
       updateSpec();
-      updateFaktor();
-      updateSpekTabel();
+      updateFaktor(); 
     });
-    luasEl.addEventListener('change', () => {
-      updateSpec();
-      updateSpekTabel();
-    });
+    luasEl.addEventListener('change', updateSpec);
     suhuEl.addEventListener('input', updateFaktor);
-    alatEl.addEventListener("input", hitungHasil);
-    document.getElementById("panjang").addEventListener("input", hitungHasil);
+    document.getElementById("panjang").addEventListener("input", hitungHasil); // Mengembalikan pemicu hitungHasil
 
     document.getElementById("btn-laporan").addEventListener("click", () => {
       if (laporanPengujian.length === 0) {
         alert("Belum ada pengujian yang disimpan dalam laporan.");
         return;
       }
+
       let isiLaporan = `Laporan Perhitungan Resistansi Konduktor\n`;
       isiLaporan += `Total Pengujian: ${laporanPengujian.length}\n\n`;
 
@@ -731,8 +728,8 @@
         isiLaporan += `Tanggal: ${uji.tanggal}\n`;
         isiLaporan += `Jam   : ${uji.jam}\n\n`;
         isiLaporan += `Input:\n`;
-        isiLaporan += `- Pembacaan Alat: ${uji.alat} Ω\n`;
-        isiLaporan += `- Panjang (Feet): ${uji.panjang}\n`;
+        isiLaporan += `- Pembacaan Alat: ${uji.alat} ${uji.alatSatuan}\n`;
+        isiLaporan += `- Panjang (Meter): ${uji.panjang}\n`;
         isiLaporan += `- Suhu (°C): ${uji.suhu}\n`;
         isiLaporan += `- Faktor Koreksi Suhu: ${uji.faktor}\n\n`;
         isiLaporan += `Data Konduktor:\n`;
@@ -740,7 +737,7 @@
         isiLaporan += `- Penampang: ${uji.luas}\n`;
         isiLaporan += `- Spesifikasi Standar: ${uji.spesifikasi}\n\n`;
         isiLaporan += `Hasil Perhitungan:\n`;
-        isiLaporan += `- Resistansi (Ω/feet): ${uji.hasil}\n`;
+        isiLaporan += `- Resistansi: ${uji.hasil} Ω/km\n`; 
         isiLaporan += `- Status Pengujian: ${uji.status}\n\n`;
       });
 
@@ -768,14 +765,13 @@
     });
 
     window.addEventListener('DOMContentLoaded', () => {
-      bahanEl.value = "CU";
-      luasEl.value = "8";
+      bahanEl.value = "CU"; 
+      luasEl.value = "4/0AWG"; 
+      suhuEl.value = "30"; 
       updateSpec();
       updateFaktor();
-      updateSpekTabel();
       alatEl.focus();
-      showGreetingHint();
-      collapseInfoArea();
+      hitungHasil(); // Panggil hitungHasil saat halaman dimuat pertama kali
     });
   </script>
 </body>
