--- a/lainnya/404.html
+++ b/lainnya/404.html
@@ -3,20 +3,53 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Video Player Loop Acak</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+  <title>Video Player</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
   <style>
-    body, html {
+    * {
+      box-sizing: border-box;
+    }
+    body {
       margin: 0;
-      padding: 0;
       background: black;
+      font-family: sans-serif;
       overflow: hidden;
     }
-
-    #videoContainer {
+    .container {
+      display: flex;
+      flex-direction: column;
       height: 100vh;
-      width: 100vw;
+      position: relative;
+    }
+    header {
+      background: #000;
+      padding: 10px;
+      text-align: center;
+      color: white;
+      z-index: 10;
+    }
+    header input[type="file"] {
+      display: none;
+    }
+    .custom-file {
+      display: inline-block;
+      background: #ff0000;
+      color: white;
+      padding: 10px 20px;
+      border-radius: 25px;
+      cursor: pointer;
+    }
+
+    .video-wrapper {
+      flex: 1;
+      position: relative;
+      overflow-y: scroll;
+      scroll-snap-type: y mandatory;
+    }
+
+    section {
+      height: 100vh;
+      scroll-snap-align: start;
       position: relative;
     }
 
@@ -26,42 +59,21 @@
       object-fit: cover;
     }
 
-    .upload-btn {
-      position: fixed;
-      top: 10px;
-      left: 10px;
-      z-index: 30;
-    }
-
-    input[type="file"] {
-      display: none;
-    }
-
-    .custom-upload {
-      background: white;
-      color: black;
-      padding: 6px 12px;
-      border-radius: 20px;
-      font-weight: bold;
-      font-size: 14px;
-      cursor: pointer;
-    }
-
     .sidebar-right {
       position: absolute;
       right: 10px;
-      top: 30%;
+      bottom: 80px;
       display: flex;
       flex-direction: column;
-      gap: 12px;
-      z-index: 20;
+      align-items: center;
+      gap: 15px;
       color: white;
-      font-size: 18px;
-      text-align: center;
+      font-size: 14px;
+      z-index: 10;
     }
 
-    .sidebar-right div i {
-      font-size: 22px;
+    .sidebar-right i {
+      font-size: 24px;
     }
 
     .bottom-info {
@@ -69,7 +81,7 @@
       bottom: 70px;
       left: 10px;
       right: 10px;
-      z-index: 20;
+      z-index: 10;
       display: flex;
       align-items: center;
       flex-wrap: wrap;
@@ -114,146 +126,117 @@
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
-      z-index: 25;
+      z-index: 15;
     }
 
     .controls button {
-      background: rgba(0, 0, 0, 0.5);
+      background: rgba(0, 0, 0, 0.6);
       color: white;
       border: none;
-      font-size: 28px;
-      padding: 12px;
+      width: 60px;
+      height: 60px;
       border-radius: 50%;
-    }
-
-    .bottom-navbar {
-      position: fixed;
-      bottom: 0;
-      left: 0;
-      right: 0;
-      background: #000;
-      border-top: 1px solid #333;
       display: flex;
-      justify-content: space-around;
-      padding: 6px 0;
-      z-index: 30;
-    }
-
-    .bottom-navbar .nav-item {
-      text-align: center;
-      color: white;
-      font-size: 12px;
-    }
-
-    .bottom-navbar .nav-item i {
-      display: block;
-      font-size: 18px;
-      margin-bottom: 2px;
-    }
-
-    @media (max-width: 400px) {
-      .subscribe-btn {
-        font-size: 11px;
-        padding: 2px 8px;
-      }
-
-      .bottom-info img {
-        width: 30px;
-        height: 30px;
-      }
-
-      .bottom-info .info-text span {
-        font-size: 12px;
-      }
+      align-items: center;
+      justify-content: center;
+      font-size: 26px;
+      box-shadow: 0 0 6px rgba(0, 0, 0, 0.6);
+      cursor: pointer;
     }
   </style>
 </head>
 <body>
-  <!-- Tombol pilih video -->
-  <div class="upload-btn">
-    <label for="videoInput" class="custom-upload">Pilih Video</label>
-    <input type="file" id="videoInput" multiple accept="video/*" />
+  <div class="container">
+    <header>
+      <label for="videoInput" class="custom-file">Pilih Video</label>
+      <input type="file" id="videoInput" accept="video/*" multiple />
+    </header>
+    <div class="video-wrapper" id="videoWrapper"></div>
   </div>
 
-  <!-- Kontainer video -->
-  <div id="videoContainer"></div>
-
-  <!-- Navbar bawah -->
-  <nav class="bottom-navbar">
-    <div class="nav-item"><i class="fa-solid fa-house"></i>Home</div>
-    <div class="nav-item"><i class="fa-solid fa-bolt"></i>Shorts</div>
-    <div class="nav-item"><i class="fa-solid fa-video"></i>Subs</div>
-    <div class="nav-item"><i class="fa-solid fa-user"></i>You</div>
-  </nav>
-
   <script>
-    const input = document.getElementById('videoInput');
-    const container = document.getElementById('videoContainer');
-    let videoURLs = [];
+    const videoInput = document.getElementById("videoInput");
+    const videoWrapper = document.getElementById("videoWrapper");
 
-    input.addEventListener('change', (e) => {
-      const files = Array.from(e.target.files);
-      videoURLs = files.map(file => URL.createObjectURL(file));
-      loadRandomVideo();
+    let videos = [];
+
+    videoInput.addEventListener("change", (e) => {
+      videos = Array.from(e.target.files);
+      shuffleArray(videos);
+      renderVideos(videos);
     });
 
-    function loadRandomVideo() {
-      if (videoURLs.length === 0) return;
+    function shuffleArray(array) {
+      for (let i = array.length - 1; i > 0; i--) {
+        const j = Math.floor(Math.random() * (i + 1));
+        [array[i], array[j]] = [array[j], array[i]];
+      }
+    }
 
-      const randomIndex = Math.floor(Math.random() * videoURLs.length);
-      const url = videoURLs[randomIndex];
-      container.innerHTML = '';
-
-      const wrapper = document.createElement('div');
-      wrapper.innerHTML = `
-        <video src="${url}" autoplay playsinline controls></video>
-
-        <div class="controls">
-          <button class="playpause"><i class="fa-solid fa-pause"></i></button>
-        </div>
-
-        <div class="sidebar-right">
-          <div><i class="fa-solid fa-thumbs-up"></i><div>16 K</div></div>
-          <div><i class="fa-solid fa-thumbs-down"></i><div>Dislike</div></div>
-          <div><i class="fa-solid fa-comment-dots"></i><div>6</div></div>
-          <div><i class="fa-solid fa-share-nodes"></i><div>Share</div></div>
-          <div><i class="fa-solid fa-rotate"></i><div>17</div></div>
-        </div>
-
-        <div class="bottom-info">
-          <img src="https://via.placeholder.com/36" alt="User"/>
-          <div class="info-text">
-            <div>
-              <span>@aqsa1610</span>
-              <button class="subscribe-btn">Subscribe</button>
-            </div>
-            <div class="mt-1">
-              <span class="text-warning">#YuSup</span> Video Random
+    function renderVideos(videoFiles) {
+      videoWrapper.innerHTML = "";
+      videoFiles.forEach((file, index) => {
+        const url = URL.createObjectURL(file);
+        const section = document.createElement("section");
+        section.innerHTML = `
+          <video src="${url}" playsinline></video>
+          <div class="controls">
+            <button class="playpause"><i class="fa-solid fa-pause"></i></button>
+          </div>
+          <div class="sidebar-right">
+            <div><i class="fa-solid fa-thumbs-up"></i><div>16 K</div></div>
+            <div><i class="fa-solid fa-thumbs-down"></i><div>Dislike</div></div>
+            <div><i class="fa-solid fa-comment-dots"></i><div>6</div></div>
+            <div><i class="fa-solid fa-share-nodes"></i><div>Share</div></div>
+            <div><i class="fa-solid fa-rotate"></i><div>17</div></div>
+          </div>
+          <div class="bottom-info">
+            <img src="https://via.placeholder.com/36" alt="User"/>
+            <div class="info-text">
+              <div>
+                <span>@aqsa1610</span>
+                <button class="subscribe-btn">Subscribe</button>
+              </div>
+              <div class="mt-1">
+                <span class="text-warning">#YuSup</span> Video ke-${index + 1}
+              </div>
             </div>
           </div>
-        </div>
-      `;
+        `;
+        videoWrapper.appendChild(section);
 
-      container.appendChild(wrapper);
+        const video = section.querySelector("video");
+        const btn = section.querySelector(".playpause");
+        const icon = btn.querySelector("i");
 
-      const video = wrapper.querySelector("video");
-      const btnIcon = wrapper.querySelector(".playpause i");
-      const playPauseBtn = wrapper.querySelector(".playpause");
+        video.volume = 1.0;
+        video.muted = false;
 
-      // tombol play/pause
-      playPauseBtn.addEventListener('click', () => {
-        if (video.paused) {
+        video.addEventListener("canplay", () => {
           video.play();
-          btnIcon.className = "fa-solid fa-pause";
-        } else {
-          video.pause();
-          btnIcon.className = "fa-solid fa-play";
-        }
-      });
+        });
 
-      // auto loop acak saat selesai
-      video.addEventListener("ended", () => {
-        setTimeout(loadRandomVideo, 1000);
+        btn.addEventListener("click", () => {
+          if (video.paused) {
+            video.play();
+            icon.className = "fa-solid fa-pause";
+          } else {
+            video.pause();
+            icon.className = "fa-solid fa-play";
+          }
+        });
+
+        video.addEventListener("ended", () => {
+          let nextIndex = (index + 1) % videoFiles.length;
+          const nextSection = videoWrapper.children[nextIndex];
+          if (nextSection) {
+            nextSection.scrollIntoView({ behavior: "smooth" });
+            const nextVideo = nextSection.querySelector("video");
+            if (nextVideo) {
+              nextVideo.play();
+            }
+          }
+        });
       });
     }
   </script>
